2003-04-24  Roland McGrath  <roland@redhat.com>

	* ldgram.y (phdr_type): Grok PT_TLS and PT_GNU_EH_FRAME names.
	If a name string is unknown, give an error rather than crashing later.

2003-04-23 Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* Makefile.am (ALL_EMULATIONS): Add eh8300hn.o, eh8300sn.o,
	eh8300hnelf.o, eh8300snelf.o and respective rules.
	* Makefile.in: Regenerate.
	* configure.tgt: Add h8300hn, h8300sn, h8300hnelf, h8300snelf
	* emulparams/h8300hn.sh: New
	* emulparams/h8300sn.sh: New
	* emulparams/h8300hnelf.sh: New
	* emulparams/h8300snelf.sh: New
	* scripttempl/h8300hn.sc: new
	* scripttempl/h8300sn.sc: new

2003-04-23  H.J. Lu <hjl@gnu.org>

	* ldmain.c (link_callbacks): Initialize error_handler.

	* ldmisc.c (error_handler): New function.

	* ldmisc.h (error_handler): New prototype.

2003-04-21  Stephane Carrez  <stcarrez@nerim.fr>

	* emulparams/m68hc11elf.sh: Use m68hc1xelf.em extra.
	* emulparams/m68hc11elfb.sh: Likewise.
	* emulparams/m68hc12elf.sh: Likewise.
	* emulparams/m68hc12elfb.sh: Likewise.

2003-04-19  Stephane Carrez  <stcarrez@nerim.fr>

	* emultempl/m68hc1xelf.em: New file to generate far trampolines on
	68HC11 and 68HC12.
	(LDEMUL_BEFORE_ALLOCATION): Override to gather the trampolines to
	generate.
	(LDEMUL_FINISH): Override to generate the trampolines after gc and
	linker relaxation.
	(LDEMUL_CREATE_OUTPUT_SECTION_STATEMENTS): Override to create the
	stub file for trampolines.
	(PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_LONGOPTS): New options
	--no-trampoline and --bank-window to control the memory bank window.

2003-04-18  H.J. Lu <hjl@gnu.org>

	* ldfile.c (ldfile_add_library_path): Remove the unused
	variable.

2003-04-18  Andrew Haley  <aph@cambridge.redhat.com>

	* scripttempl/xstormy16.sc (__data, __rdata): New.

2003-04-16  Nick Clifton  <nickc@redhat.com>

	* scripttempl/xstormy16.sc: Add .jcr section mapping.

2003-04-15  H.J. Lu <hjl@gnu.org>

	From Debian by Jack Howarth <howarth@nitro.med.uc.edu>:
